<resources>
    <string name="app_name">Hapi Security</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="autor">Mario Ingelmo Diana</string>
    <string name="menu_escanear">Escanear</string>
    <string name="menu_buscador">Buscador</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_compartir">Compartir</string>
    <string name="compartir">COMPARTIR</string>
    <string name="action_settings">Configuración</string>
    <string name="gracias_compartir">¡Gracias por compartir la aplicación!</string>
    <string name="nombre_dispositivo">Nombre:</string>
    <string name="marca_dispositivo">Marca:</string>
    <string name="categoria_dispositivo">Categoría:</string>
    <string name="precio_dispositivo">Precio:</string>
    <string name="seguridad_dispositivo">Seguridad:</string>
    <string name="sostenibilidad_dispositivo">Sostenibilidad:</string>
    <string name="media_dispositivo">Media:</string>
    <string name="descripcion_dispositivo">Descripción:</string>
    <string name="lista_aspectos_seguridad_dispositivo">Lista Características Seguridad:</string>
    <string name="lista_aspectos_sostenibilidad_dispositivo">Lista Características Sostenibilidad:</string>
    <string name="imagen_del_dispositivo">Imagen del dispositivo</string>
    <string name="favorito_dispositivo">Favorito</string>
    <string name="filtros">Filtros</string>
    <string name="seguridad">Seguridad:</string>
    <string name="sostenibilidad">Sostenibilidad:</string>
    <string name="imagendispositivo">ImagenDispositivo</string>
    <string name="positivas">Positivas:</string>
    <string name="negativas">Negativas:</string>
    <string name="categoria">Categoría:</string>
    <string name="seguridad_text">Seguridad:</string>
    <string name="sostenibilidad_text">Sostenibilidad:</string>
    <string name="cancelar">Cancelar</string>
    <string name="aplicar">Aplicar</string>
    <string name="ordenar">Ordenar:</string>
    <string-array name="categorias_array">
        <item>Todas</item>
        <item>Asistente Virtual</item>
        <item>Iluminacion</item>
        <item>Climatizacion</item>
        <item>Electrodomesticos Inteligentes</item>
        <item>Limpieza</item>
    </string-array>
    <string-array name="ordenar_array">
        <item>Alfabetico</item>
        <item>Seguridad</item>
        <item>Sostenibilidad</item>
    </string-array>
</resources>